different starting balance

--- a/analysis/generate_plots.ipynb
+++ b/analysis/generate_plots.ipynb
@@ -656,7 +656,20 @@
     }
    ],
    "source": [
-    "df['action/agent_0']"
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "df_plot = df[['agent0/lp_0_pool_0/borrow_interest_rate', 'agent0/lp_0_pool_1/borrow_interest_rate']].copy(deep=True)\n",
+    "df_plot.columns = ['Lending Pool 0', 'Lending Pool 1']\n",
+    "df_plot.plot(ax=ax)\n",
+    "ax.set_title(\"Supply Interest Rate for Pool 1\")\n",
+    "ax.set(xlabel=\"Time (t)\")\n",
+    "ax.set_xlim(0,None)\n",
+    "\n",
+    "fig.savefig(f\"./plots/session_{session_id}_supply_interest_rate\")\n",
+    "\n",
+    "# ax2 = ax1.twinx()\n",
+    "# df['agent0/lp_0_pool_1/agent_2_supply'].plot(ax=ax2, colormap='cool')\n",
+    "# df['agent0/lp_1_pool_1/agent_2_supply'].plot(ax=ax2, colormap='hot')"
    ]
   },
   {
