--- a/analysis/generate_plots.ipynb
+++ b/analysis/generate_plots.ipynb
@@ -23,18 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 154,
    "id": "204fca3a-c365-45a6-b3af-899706839469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (948193885.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[154], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    RUN_ID = 2¨3\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
     "SESSION_ID = 5\n",
-    "RUN_ID = 2"
+    "RUN_ID = 2¨3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 155,
    "id": "25106f14-75dd-48cb-b3dd-935542ca8120",
    "metadata": {},
    "outputs": [],
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 156,
    "id": "f4fe37eb-e035-40d5-ba00-dac63573ba8d",
    "metadata": {},
    "outputs": [
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 157,
    "id": "de83af2f-41c5-4658-a971-59713a2f8caf",
    "metadata": {},
    "outputs": [
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 158,
    "id": "911f23fc-dafd-425f-a3fe-d6dffb971bc0",
    "metadata": {},
    "outputs": [],
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 159,
    "id": "3ac2a85f-ba26-4581-9717-4d8951c23bfe",
    "metadata": {
     "scrolled": true
@@ -289,7 +298,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 160,
    "id": "ce264f60-0c41-4c40-b54a-ec04cbfa06e3",
    "metadata": {},
    "outputs": [
@@ -366,9 +375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 161,
    "id": "2699b0f1-3933-4309-81b9-def225098593",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
